--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="director">Director:</string>
     <string name="year">Year:</string>
     <string name="rating">Rating:</string>
+    <string name="filmList">Film List</string>
 </resources>
