--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="year">Year:</string>
     <string name="rating">Rating:</string>
     <string name="filmList">Film List</string>
+    <string name="parasite">parasite</string>
 </resources>
