--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,10 @@
     <string name="validate_phone_number">Validate phone Number!</string>
     <string name="phone_number">Phone Number</string>
     <string name="check_connectivity">Check Connectivity</string>
+    <string name="film_view">Film View</string>
+    <string name="genre">Genre :</string>
+    <string name="title">Title :</string>
+    <string name="search_title">search_title</string>
+    <string name="search_hint">search</string>
+
 </resources>
