--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="director">Director:</string>
     <string name="mr">Mr.</string>
     <string name="year">Year:</string>
-    <string name="rating">Rating:</string>
+    <string name="rating">IMDB Rating:</string>
     <string name="filmList">Film List</string>
     <string name="parasite">parasite</string>
 
@@ -35,5 +35,7 @@
     <string name="title">Title :</string>
     <string name="search_title">search_title</string>
     <string name="search_hint">search</string>
+    <string name="show_me_more_detail">More Detail :</string>
+    <string name="country">Country :</string>
 
 </resources>
